--- a/style/style.css
+++ b/style/style.css
@@ -2,6 +2,9 @@ div {
           background-color: rgb(103, 204, 204);
           background-image: none;
           margin: 5px;
+          border: 5px solid blueviolet;
+          border-radius: 10px;
+          width: 50%;
 
 }
 
